--- a/site/src/main/webapp/templates/treeInfo.xhtml
+++ b/site/src/main/webapp/templates/treeInfo.xhtml
@@ -25,7 +25,7 @@
                 draggable="true" droppable="true" dragdropScope="demo"
                 selectionMode="single" selection="#{treeBean.selectedNode}" onNodeClick="doNav();"
                 style="width: 300px;">
-            <p:ajax event="dragdrop" listener="#{treeBean.onDragDrop}"/>
+            <p:ajax event="dragdrop" listener="#{treeBean.onDragDrop}" update=":treeForm:tree"/>
             <p:ajax event="select"
 
                     update=":treeForm:fsTable :treeForm:fsTable:lastPage :treeForm:fsTable:back  :treeForm:fsTable:next :edit "/>
@@ -59,7 +59,8 @@
                              style="border-radius: 11px;font-size: 16px; margin-bottom: 5px; color: #000000;" size="90"
                              disabled="true"/>
 
-                <p:tabMenu activeIndex="4">
+                <p:tabMenu activeIndex="5">
+                    <p:menuitem value="Create Document" onclick="PF('createDocDialog').show();"/>
                     <p:menuitem value="New Folder" onclick="PF('createDialog').show();"
                                 icon="ui-icon-folder-collapsed"/>
                     <p:menuitem id="downloadLink" disabled="#{!fileActions.selectedIsFile}" value="Download"
@@ -141,6 +142,7 @@
     </p:panelGrid>
 
     <p:contextMenu for="tree">
+        <p:menuitem value="New Document" onclick="PF('createDocDialog').show();" icon="ui-icon-document"/>
         <p:menuitem value="New Folder" onclick="PF('createDialog').show();" icon="ui-icon-document"/>
         <p:menuitem value="Edit" onclick="PF('editDialog').show();" icon="ui-icon-document"/>
         <p:menuitem value="Delete" onclick="PF('deleteDialog').show();" icon="ui-icon-document"/>
@@ -175,6 +177,8 @@
           visible="#{facesContext.validationFailed}"
           appendToBody="true"
         >
+
+
 
     <h:form id="createForm">
 
@@ -220,6 +224,26 @@
         <p:commandButton value="Cancel" type="button" onclick="PF('deleteDialog').hide()" style="float:right;"/>
         <p:remoteCommand name="updater" update=":treeForm:tree :treeForm:fsTable :delete"/>
     </h:form>
+</p:dialog>
+<p:dialog id="createDoc" header="Create document" widgetVar="createDocDialog"
+          modal="true"
+          showEffect="fade"
+          hideEffect="fade"
+          resizable="false"
+          appendToBody="true"
+
+        >
+    <h:form id="createdDocDialog" enctype="multipart/form-data" >
+
+        <p:fileUpload  value="#{fileActions.file}"  mode="simple"/>
+        <p:watermark for="inputTextForDoc" value="Name"/>
+        <p:inputText id = "inputTextForDoc" value="#{action.name}" validatorMessage="Wrong name" label="name" >
+            <f:validateRegex pattern="^[_A-Za-z0-9-\+]{0,14}$" />
+        </p:inputText>
+        <p:commandButton value="Ok"  actionListener="#{action.createFile(treeBean.parent)}" ajax="false"/>
+        <p:commandButton value="Cansel" onclick="createDocDialog.hide();" ajax="false"/>
+    </h:form>
+
 </p:dialog>
 </ui:composition>
 </h:body>
