fixed issue with rename verionable file, and if the content is not specified, the past should stay

--- a/site/src/main/webapp/templates/treeInfo.xhtml
+++ b/site/src/main/webapp/templates/treeInfo.xhtml
@@ -78,6 +78,9 @@
                     <p:column style="width: 100px;" headerText="Id">
                         <h:outputText value="#{fsFile.id}"/>
                     </p:column>
+                    <p:column style="width: 200px;" headerText="Name">
+                        <h:outputText value="#{fsFile.name}"/>
+                    </p:column>
                     <p:column style="width: 100px;" headerText="Version label">
                         <h:outputText value="#{fsFile.versionLabel}"/>
                     </p:column>
