--- a/site/src/main/webapp/templates/treeInfo.xhtml
+++ b/site/src/main/webapp/templates/treeInfo.xhtml
@@ -53,7 +53,7 @@
                   resizable="false">
             <ct:cmisBrowserComponent id="cmisbrowserdialog"/>
 
-            <p:commandButton value="Cancel" type="button" onclick="TreeinDialog.hide()"/>
+            <p:commandButton value="View as Web Page" type="button" onclick="TreeinDialog.hide()"/>
         </p:dialog>
     </ui:composition>
 </h:body>
