Exceptions + Search pre Demo

--- a/site/src/main/webapp/templates/treeInfo.xhtml
+++ b/site/src/main/webapp/templates/treeInfo.xhtml
@@ -14,6 +14,8 @@
         <h:outputStylesheet library="style" name="style.css"/>
         <h:outputScript library="js" name="native_but.js"/>
 
+        <p:messages id="erro" showDetail="true" autoUpdate="true"/>
+
         <ct:cmisBrowserComponent id="cmisbrowser"/>
 
         <p:dialog id="copyDialogId" header="Copy" widgetVar="copyDialog"
