fixed some issues, need work with update after some actions

--- a/site/src/main/webapp/templates/login.xhtml
+++ b/site/src/main/webapp/templates/login.xhtml
@@ -34,7 +34,7 @@
                                          required="true" label="Login" disabled="#{login.anonymous}"/>
 
                             <h:outputLabel for="password" value="Password: *"/>
-                            <p:inputText id="password" value="#{login.password}"
+                            <p:inputText id="password" type="password" value="#{login.password}"
                                          required="true" label="Password" disabled="#{login.anonymous}"/>
 
 
