Fixed copy update

--- a/site/src/main/webapp/templates/treeInfo.xhtml
+++ b/site/src/main/webapp/templates/treeInfo.xhtml
@@ -47,7 +47,7 @@
 
 
                 <p:commandButton value="OK"
-                                 update=":cmisbrowser"
+                                 update=":cmisbrowser:treeForm"
                                  actionListener="#{action.copyFolder(treeBean.selectedFSObject)}"
                                  oncomplete="if (!args.validationFailed) copyDialog.hide()"/>
 
