--- a/site/src/main/webapp/templates/header.xhtml
+++ b/site/src/main/webapp/templates/header.xhtml
@@ -5,7 +5,7 @@
       xmlns:ui="http://java.sun.com/jsf/facelets">
 <body>
 <ui:composition>
-    <h1 style="text-align: center;">CMIS Browser A</h1>
+    <h1 style="color: #ffffff; text-align: center;">CMIS Browser A</h1>
 </ui:composition>
 </body>
 </html>
