--- a/site/src/main/webapp/templates/login.xhtml
+++ b/site/src/main/webapp/templates/login.xhtml
@@ -8,7 +8,7 @@
 
 <h:body>
     <ui:composition>
-        <p:accordionPanel activeIndex="-1">
+        <p:accordionPanel style="color: #000000;" activeIndex="-1">
             <p:tab title="Login">
                 <h:outputLink value="config.xhtml"
                               style="text-decoration: none; color: black; font-size: 20px;margin:5px;">
