--- a/site/src/main/webapp/templates/footer.xhtml
+++ b/site/src/main/webapp/templates/footer.xhtml
@@ -5,7 +5,7 @@
       xmlns:ui="http://java.sun.com/jsf/facelets">
 <body>
 <ui:composition>
-    <div style="text-align: center; padding: 20px; font-size: 12px;">
+    <div style="color: #ffffff; text-align: center; padding: 20px; font-size: 12px;">
         2013 © EngagePoint. EngagePoint™ word-mark and stylized logo design are registered trademarks of Consumer Health Technologies, Inc. All rights reserved.
     </div>
 </ui:composition>
