--- a/site/src/main/webapp/templates/templateLayout.xhtml
+++ b/site/src/main/webapp/templates/templateLayout.xhtml
@@ -9,8 +9,8 @@
             djConfig="preventBackButtonFix: false">
     </script>
 </h:head>
-<h:body>
-    <h:panelGrid bgcolor="#f5f5f5" width="100%">
+<h:body style="background: rgb(238, 238, 238);">
+    <h:panelGrid bgcolor="#2899B7" style="border-radius: 11px;" width="100%">
         <ui:insert name="header">
             <ui:include src="/templates/header.xhtml"/>
         </ui:insert>
@@ -25,7 +25,7 @@
             <ui:include src="/templates/treeInfo.xhtml"/>
         </ui:insert>
     </h:panelGrid>
-    <h:panelGrid  bgcolor="#f5f5f5" width="100%" style="margin-top: 15px;">
+    <h:panelGrid  bgcolor="#2899B7" width="100%" style="border-radius: 11px; margin-top: 15px;">
         <ui:insert name="footer">
             <ui:include src="/templates/footer.xhtml"/>
         </ui:insert>
