--- a/site/src/main/webapp/templates/templateLayout.xhtml
+++ b/site/src/main/webapp/templates/templateLayout.xhtml
@@ -9,8 +9,8 @@
             djConfig="preventBackButtonFix: false">
     </script>
 </h:head>
-<h:body style="background: rgb(238, 238, 238);">
-    <h:panelGrid bgcolor="#2899B7" style="border-radius: 11px;" width="100%">
+<h:body style="margin: 15px; background: rgb(238, 238, 238);">
+    <h:panelGrid bgcolor="#2899B7" style="height: 80px;border-radius: 15px;" width="100%">
         <ui:insert name="header">
             <ui:include src="/templates/header.xhtml"/>
         </ui:insert>
