--- a/site/src/main/webapp/templates/treeInfo.xhtml
+++ b/site/src/main/webapp/templates/treeInfo.xhtml
@@ -67,7 +67,7 @@
                              scrollable="true"
                              value="#{action.history}"
                              emptyMessage="No history"
-                             scrollHeight="400" style="width: 770px;"
+                             style="width: 770px;"
                              rowKey="#{fsFile}"
                              selection="#{treeBean.selectedFSObject}"
                              selectionMode="single"
